Copy to selected not working for Python defined properties #54005

Closed
opened 2018-02-05 21:50:28 +01:00 by Brecht Van Lommel · 5 comments

System Information
Linux 64 bit

Blender Version
Broken: blender2.8 354f92a
Worked: master

Short description of error
From D3040. RNA_property_copy of Python defined RNA properties is broken after the refactoring in 638afb9bd.

The ID property backing the RNA property is created when first set, and the destination ID property not existing yet seems to cause problems in the new code. I don't understand the logic in rna_property_override_operation_apply enough to fix this.

Exact steps for others to reproduce the error
In the attached .blend, right click on Shadow Catcher in properties editor, and click Copy to Selected. The property will not be copied.
copy_to_selected_idprop.blend

**System Information** Linux 64 bit **Blender Version** Broken: blender2.8 354f92a Worked: master **Short description of error** From [D3040](https://archive.blender.org/developer/D3040). `RNA_property_copy` of Python defined RNA properties is broken after the refactoring in 638afb9bd. The ID property backing the RNA property is created when first set, and the destination ID property not existing yet seems to cause problems in the new code. I don't understand the logic in `rna_property_override_operation_apply` enough to fix this. **Exact steps for others to reproduce the error** In the attached .blend, right click on Shadow Catcher in properties editor, and click Copy to Selected. The property will not be copied. [copy_to_selected_idprop.blend](https://archive.blender.org/developer/F2134416/copy_to_selected_idprop.blend)
Author
Owner

Added subscriber: @brecht

Added subscriber: @brecht
Author
Owner

Added subscriber: @mont29
Removed subscriber: @brecht

Added subscriber: @mont29 Removed subscriber: @brecht
Author
Owner

Added subscriber: @brecht

Added subscriber: @brecht
Bastien Montagne self-assigned this 2018-02-06 11:57:47 +01:00

This issue was referenced by 1ae5dfd049

This issue was referenced by 1ae5dfd04933752c0cd5a11281806401fad0a1f2

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#54005
No description provided.